# ce-base-extractor

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  build_exe.ps1  config.default.json  pyproject.toml  requirements.txt  一键启动.cmd  安装环境.cmd
.github/workflows/: ci.yml
ce_base_extractor/: __init__.py  __main__.py  cli_commands.py  logging_config.py  models.py  pipeline.py
ce_base_extractor/api/: __init__.py  server.py
ce_base_extractor/compare/: __init__.py  sqlite_diff.py
ce_base_extractor/export/: __init__.py  batch_export.py  context.py  ct_export.py  formatter.py  frida_guest.py  frida_script.py  lua_script.py  python_module.py  python_script.py  scc_export.py  signature_export.py
ce_base_extractor/filters/: __init__.py  cross_validate.py  emulator_rules.py  fuzzy_dedupe.py  key_store.py  presets.py  scorer.py  stream_rank.py
ce_base_extractor/gui/: app.py  app_imports.py  chain_dialog.py  errors.py  theme.py  (+2 more)
docs/: TROUBLESHOOTING.md
examples/: README.md  demo_il2cpp_map.json  make_sample_sqlite.py  scc_loader.py
scripts/: ce_export_helper.lua
tests/: conftest.py  test_cli.py  test_cross_validate.py  test_frida_export.py  test_fuzzy_dedupe.py  test_il2cpp.py  test_integrations_scc.py  test_live_probe.py  test_profiles.py  test_ptr_and_keystore.py  test_python_export.py  test_restart_verify.py  test_scc_import.py  test_scorer.py  test_signature.py  test_sqlite_diff.py  test_sqlite_parser.py  test_standalone_reader.py  test_suggest.py  test_v050_features.py  test_v051_features.py  test_v053_features.py  test_v060_features.py
(+38 files in other folders)
