[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ce-base-extractor"
version = "0.5.0"
description = "从 Cheat Engine 指针扫描结果一键提取稳定基址（模拟器优化）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "windnd>=1.0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
ce-base-extractor = "ce_base_extractor.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ce_base_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
